--- a/style.css
+++ b/style.css
@@ -1,33 +1,63 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+    @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Viagem dos Sonhos</title>
-</head>
+    :root {
+        --cor-fundo: #ffffff;
+        --cor-principal: hsl(0, 0%, 0%) ;
+        --cor-secundaria: hsl(198, 87%, 68%);
+        --cor-destaque: #002351;
+        --cor-texto: #fefefe;
+    }
+    
+    body {
+        background-color: var(--cor-fundo);
+        color: var(--cor-texto);
+        font-family: 'Inter', sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+    }
 
-<body>
-    <div class="caixa-principal">
-        <h1>Viagem dos Sonhos</h1>
-        <div class="tela-inicial">
-            <p>
-                Quem aí não sonha em fazer aquela viagem perfeita? Bora descobrir qual destino combina com seu jeitinho, 
-                se é praia, montanha, cidade histórica ou aventura no meio do nada!
-            </p>
-            <button class="iniciar-btn">Descobrir meu destino</button>
-        </div>
-        <div class="caixa-perguntas"></div>
-        <div class="caixa-alternativas"></div>
-        <div class="caixa-resultado">
-            <p class="texto-resultado"></p>
-            <button class="novamente-btn">Quero tentar de novo!</button>
-        </div>
-    </div>
-    <script type="module" src="js/aleatorio.js"></script>
-    <script type="module" src="js/perguntas.js"></script>
-    <script type="module" src="js/script.js"></script>
-</body>
+    .caixa-principal{
+        background-color: var(--cor-principal);
+        width: 90%;
+        max-width: 600px;
+        text-align: center;
+        padding: 20px;
+    }
 
-</html>
+    h1, .caixa-perguntas, .caixa-resultado{
+        font-family: 'Chakra Petch', sans-serif;
+    }
+
+    h1 {
+        color: var(--cor-destaque);
+    }
+
+    button {
+        background-color: var(--cor-secundaria);
+        color: var(--cor-texto);
+        border: none;
+        border-radius: 15px;
+        padding: 15px;
+        transition: background-color 0.3s;
+    }
+
+    button:hover {
+        background-color: var(--cor-destaque);
+        color: var(--cor-principal);
+    }
+
+    .caixa-resultado{
+        display: none;
+    }
+
+    .caixa-resultado.mostrar{
+        display: block;
+    }
+
+    .caixa-alternativas{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
